--- a/frontend/studente/src/pages/home/home.html
+++ b/frontend/studente/src/pages/home/home.html
@@ -4,6 +4,7 @@
       <!--      {{'title_home'|translate}}-->
     </ion-title>
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-notifications></button-notifications>
       <button-profile></button-profile>
     </ion-buttons>
