Added padding in credits info

--- a/frontend/studente/src/pages/credits/credits.html
+++ b/frontend/studente/src/pages/credits/credits.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content class="padding">
-    <div>
-        <h2><strong>Cartella Studente</strong></h2>
+    <div padding>
+        <h2>Cartella Studente</h2>
         <p>&nbsp;</p>
         <p>Il progetto &ldquo;Cartella dello Studente&rdquo;, nato dalla collaborazione tra il Servizio Istruzione della Provincia
             Autonomia di Trento e lo Smart Community Lab di FBK, valorizza le informazioni sul percorso scolastico degli
