--- a/frontend/studente/src/pages/curriculum/curriculum.html
+++ b/frontend/studente/src/pages/curriculum/curriculum.html
@@ -4,7 +4,7 @@
     <ion-title>
       <ion-row>
         <img class="profile-img" *ngIf="student.contentType" [src]="profilePicture" />
-        <img class="profile-img" *ngIf="!student.contentType" src="assets/images/profile-pictures.png" />
+        <img class="profile-img" *ngIf="!student.contentType" src="../assets/images/profile-pictures.png" />
         <ion-label>{{student.name}} {{student.surname}}</ion-label>
         <ion-label>{{'title_curriculum'|translate}}</ion-label>
       </ion-row>
