Added credit info button in all pages.

--- a/frontend/studente/src/pages/certifications/certifications.html
+++ b/frontend/studente/src/pages/certifications/certifications.html
@@ -4,6 +4,7 @@
       {{'title_certifications'|translate}}
     </ion-title>
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-home></button-home>
       <button-notifications></button-notifications>
       <button-profile></button-profile>
