--- a/frontend/studente/src/pages/curriculum/curriculum.html
+++ b/frontend/studente/src/pages/curriculum/curriculum.html
@@ -11,6 +11,7 @@
     </ion-title>
 
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-notifications></button-notifications>
       <button-profile></button-profile>
     </ion-buttons>
