--- a/frontend/studente/src/pages/exam/exams.html
+++ b/frontend/studente/src/pages/exam/exams.html
@@ -3,8 +3,11 @@
     <ion-title>
       {{'title_exam'|translate}}
     </ion-title>
-        <ion-buttons end>
-      <button-home></button-home><button-notifications></button-notifications><button-profile></button-profile>
+    <ion-buttons end>
+      <button-credits></button-credits>
+      <button-home></button-home>
+      <button-notifications></button-notifications>
+      <button-profile></button-profile>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
