--- a/frontend/studente/src/pages/notifications/notifications.html
+++ b/frontend/studente/src/pages/notifications/notifications.html
@@ -3,15 +3,17 @@
     <ion-title>
       {{'title_notifiche'|translate}}
     </ion-title>
-            <ion-buttons end>
-      <button-home></button-home><button-profile></button-profile>
+    <ion-buttons end>
+      <button-credits></button-credits>
+      <button-home></button-home>
+      <button-profile></button-profile>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <!--</ion-list>-->
-        <ion-card class="eperience-empty-list-label">
-      {{'notifications_empty_list_label'|translate}}
+  <!--</ion-list>-->
+  <ion-card class="eperience-empty-list-label">
+    {{'notifications_empty_list_label'|translate}}
   </ion-card>
 </ion-content>
