--- a/frontend/studente/src/pages/profile/profile.html
+++ b/frontend/studente/src/pages/profile/profile.html
@@ -4,6 +4,7 @@
       {{'title_profile'|translate|uppercase}}
     </ion-title>
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-home></button-home>
       <button-notifications></button-notifications>
     </ion-buttons>
