--- a/frontend/studente/src/pages/activities/activities.html
+++ b/frontend/studente/src/pages/activities/activities.html
@@ -4,6 +4,7 @@
       {{'title_activities'|translate}}
     </ion-title>
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-home></button-home>
       <button-notifications></button-notifications>
       <button-profile></button-profile>
