--- a/frontend/studente/src/pages/events/events.html
+++ b/frontend/studente/src/pages/events/events.html
@@ -3,48 +3,52 @@
     <ion-title>
       {{'title_events'|translate}}
     </ion-title>
-        <ion-buttons end>
-      <button-home></button-home><button-notifications></button-notifications><button-profile></button-profile>
+    <ion-buttons end>
+      <button-credits></button-credits>
+      <button-home></button-home>
+      <button-notifications></button-notifications>
+      <button-profile></button-profile>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-grid>
-  <ion-row>
-    <ion-col col-8>
-  <div class="stage-filter">
-    <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
-    <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
-    <ion-item>
-      <ion-label>{{'order_label'|translate}}</ion-label>
-      <ion-select [(ngModel)]="order">
-        <ion-option value=true>A-Z</ion-option>
-        <ion-option value=false>Z-A</ion-option>
-      </ion-select>
-    </ion-item>
-  </div>
-       </ion-col>
-    <ion-col col-4>
-    <div >
-    <button class="button-add-stage label-button" ion-button clear (click)="addNewEvent()">{{'event_add_new_button'|translate}}</button>
-  </div>
-    </ion-col>
+    <ion-row>
+      <ion-col col-8>
+        <div class="stage-filter">
+          <input type="text" [(ngModel)]="filter" placeholder="{{'stage_filter_placeholder'|translate}}">
+          <ion-icon class="filter-search-icon" name="md-search"></ion-icon>
+          <ion-item>
+            <ion-label>{{'order_label'|translate}}</ion-label>
+            <ion-select [(ngModel)]="order">
+              <ion-option value=true>A-Z</ion-option>
+              <ion-option value=false>Z-A</ion-option>
+            </ion-select>
+          </ion-item>
+        </div>
+      </ion-col>
+      <ion-col col-4>
+        <div>
+          <button class="button-add-stage label-button" ion-button clear (click)="addNewEvent()">{{'event_add_new_button'|translate}}</button>
+        </div>
+      </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-list  *ngIf="(events.length>0)">
-    <ion-card  *ngFor="let event of events| experiencefilter:filter:'title'| orderBy:'event.attributes.title':order">
+  <ion-list *ngIf="(events.length>0)">
+    <ion-card *ngFor="let event of events| experiencefilter:filter:'title'| orderBy:'event.attributes.title':order">
       <div class="experience-expandable-list">
         <div class="experience-title">{{event.attributes.title}}</div>
         <div class="experience-document"><span *ngIf="event.document">{{'document_label'|translate}}</span><span *ngIf="!event.document">{{'not_document_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only (click)="toggleDetails(event)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(event) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+        <button class="stage-expansion" clear ion-button icon-only (click)="toggleDetails(event)"> <ion-icon class="experience-expansion-icon" item-right [name]="isDetailsShown(event) ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="isDetailsShown(event)">
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_title_label'|translate}}</span> {{event.attributes.title}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.attributes.dateFrom |localizedDate}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |localizedDate}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.attributes.location}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.attributes.description}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'event_title_label'|translate}}</span> {{event.attributes.title}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'event_dateFrom_label'|translate}}</span>{{event.attributes.dateFrom
+          |localizedDate}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'event_dateTo_label'|translate}}</span>{{event.attributes.dateTo |localizedDate}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'event_location_label'|translate}}</span>{{event.attributes.location}}</div>
+        <div class="experience-title"> <span class="registration-institute-label">{{'event_description_label'|translate}}</span>{{event.attributes.description}}</div>
         <div *ngIf="!event.attributes.institutional">
           <button class="label-button" ion-button clear (click)="deleteEvent(event)">{{'delete_button'|translate}}</button>
           <button class="label-button" ion-button clear (click)="updateEvent(event)">{{'update_button'|translate}}</button>
@@ -53,8 +57,8 @@
 
     </ion-card>
   </ion-list>
-    <ion-card class="eperience-empty-list-label" *ngIf="(events.length==0)">
-      {{'events_empty_list_label'|translate}}
+  <ion-card class="eperience-empty-list-label" *ngIf="(events.length==0)">
+    {{'events_empty_list_label'|translate}}
   </ion-card>
 
 </ion-content>
