--- a/frontend/studente/src/pages/jobs/jobs.html
+++ b/frontend/studente/src/pages/jobs/jobs.html
@@ -4,6 +4,7 @@
       {{'title_job'|translate}}
     </ion-title>
     <ion-buttons end>
+      <button-credits></button-credits>
       <button-home></button-home>
       <button-notifications></button-notifications>
       <button-profile></button-profile>
