Fixes for login page.

--- a/frontend/studente/src/assets/terms/terms.html
+++ b/frontend/studente/src/assets/terms/terms.html
@@ -1,6 +1,6 @@
 <div id="policy_screen">
 
-    <div class="start_subtitle">TERMINI E CONDIZIONI DI UTILIZZO</div>
+    <div class="start_subtitle"><h1>TERMINI E CONDIZIONI DI UTILIZZO</h1></div>
 
     <div class="policy_box">
 
