--- a/frontend/studente/src/pages/credits/credits.html
+++ b/frontend/studente/src/pages/credits/credits.html
@@ -29,7 +29,7 @@
             scolastica di avere un ruolo attivo nella creazione di nuovi servizi. Se hai un&rsquo;idea innovativa per la
             realizzazione di un servino utile scrivici a <a href="mailto:cartella-studente@smartcommunitylab.eu">cartella-studente@smartcommunitylab.eu</a>            e valuteremo assieme le opportunit&agrave; di come realizzarlo.</p>
         <p>&nbsp;</p>
-        <p class="credits img">
+        <p class="img">
             <ion-row>
                 <ion-col>
                     <a target="_blank" href="http://www.provincia.tn.it/"><img src="../assets/images/pat.png"/></a>
