--- a/frontend/studente/src/pages/login/login.html
+++ b/frontend/studente/src/pages/login/login.html
@@ -73,6 +73,7 @@
         <a target="_blank" href="http://www.smartcommunitylab.it/contatti/">Assistenza</a>
       </ion-col>
       <ion-col>
+        <a target="_blank" href="/cartella/assets/terms/terms.html">Privacy and Conditions.</a>
       </ion-col>
     </ion-row>
   </ion-grid>
