Fixes for 'assets' folder path.

--- a/frontend/studente/src/pages/credits/credits.html
+++ b/frontend/studente/src/pages/credits/credits.html
@@ -32,10 +32,10 @@
         <p class="img">
             <ion-row>
                 <ion-col>
-                    <a target="_blank" href="http://www.provincia.tn.it/"><img src="../assets/images/pat.png"/></a>
+                    <a target="_blank" href="http://www.provincia.tn.it/"><img src="assets/images/pat.png"/></a>
                 </ion-col>
                 <ion-col>
-                    <a target="_blank" href="http://www.fbk.eu"><img src="../assets/images/fbk.png"/></a>
+                    <a target="_blank" href="http://www.fbk.eu"><img src="assets/images/fbk.png"/></a>
                 </ion-col>
             </ion-row>
         </p>
