--- a/frontend/studente/src/pages/profile/profile.html
+++ b/frontend/studente/src/pages/profile/profile.html
@@ -15,7 +15,7 @@
     <ion-row>
       <ion-col>
         <img class="profile-img" *ngIf="student.contentType" [src]="profilePicture" />
-        <img class="profile-img" *ngIf="!student.contentType" src="../assets/images/profile-pictures.png" />
+        <img class="profile-img" *ngIf="!student.contentType" src="assets/images/profile-pictures.png" />
       </ion-col>
     </ion-row>
     <ion-row *ngIf="editMode">
