Fixes for updated terms

--- a/frontend/studente/src/assets/terms/terms.html
+++ b/frontend/studente/src/assets/terms/terms.html
@@ -1,11 +1,9 @@
 <div id="policy_screen">
-
-    <div class="start_subtitle"><h1>TERMINI E CONDIZIONI DI UTILIZZO</h1></div>
-
+    <div class="start_subtitle">
+        <h1>TERMINI E CONDIZIONI DI UTILIZZO</h1>
+    </div>
     <div class="policy_box">
-
         <div class="policy_text">
-
             <p>Informativa sulle caratteristiche del trattamento di dati personali, nell'ambito del fascicolo formativo elettronico,
                 nonch&eacute; sulle caratteristiche dei servizi erogati tramite questo trattamento</p>
             <h1>La "Cartella dello Studente"</h1>
@@ -22,14 +20,14 @@
                     dati esterne, sia attraverso l&rsquo;intervento diretto dell&rsquo;utente;</li>
                 <li>mettere a disposizione della comunit&agrave; scolastica servizi utili nel percorso didattico ed extra-didattico;</li>
             </ul>
-            <h1 >Perch&eacute; questa informativa?</h1>
+            <h1>Perch&eacute; questa informativa?</h1>
             <p>Questa informativa serve a spiegarti le ragioni per le quali ti viene chiesto di esprimere il consenso a trattare
                 i dati personali che ti riguardano costituendo il tuo fascicolo dello studente, fornendoti tutti gli elementi
                 necessari a valutare liberamente se farlo. L'informativa risponde ad un obbligo di legge, espressamente previsto
                 dal Codice per il trattamento dei dati personali (D. Lgs. 196/2003) e recepisce le indicazioni espresse da
                 una serie di documenti nazionali ed internazionali.</p>
             <p>&nbsp;</p>
-            <h1 >Che cos'&egrave; Cartella</h1>
+            <h1>Che cos'&egrave; Cartella dello Studente</h1>
             <p>La &ldquo;Cartella dello Studente&rdquo; realizza il fascicolo dello studente, la raccolta ordinata e struttura
                 dei dati relativi al percorso formativo dello studente. I dati raccolti riguardano le esperienze formative
                 didattiche e ed extra-didattiche dell&rsquo;utente e provengono sia da base dati utilizzate nel contesto
@@ -42,11 +40,11 @@
             <p>La &ldquo;Cartella dello Studente&rdquo; &egrave; uno spazio digitale, la cui integrit&agrave; e sicurezza &egrave;
                 garantita dal Servizio Istruzione della PAT, nel quale decidere in piena libert&agrave; cosa annotare e registrare,
                 per una tua finalit&agrave; di ordine cognitivo e documentale, funzionale a consentirti un migliore e pi&ugrave;
-                consapevole rapporto con i dati relativi alla tua istruzione. Se lo desideri, in ogni&nbsp; momento, puoi
-                decidere se dare accesso ai dati contenuti a terzi impegnati nell'erogazione di una prestazione a favore
-                del tuo percorso formativo (es. servizio di valutazione del CV, di supporto alle scelte future, etc.)</p>
+                consapevole rapporto con i dati relativi alla tua istruzione. Se lo desideri, in ogni momento, puoi decidere
+                se dare accesso ai dati contenuti a terzi impegnati nell'erogazione di una prestazione a favore del tuo percorso
+                formativo (es. servizio di valutazione del CV, di supporto alle scelte future, etc.)</p>
             <p>&nbsp;</p>
-            <h1 >L'espressione del consenso ai fini della adesione a &ldquo;Cartella dello Studente&rdquo;</h1>
+            <h1>L'espressione del consenso ai fini della adesione a &ldquo;Cartella dello Studente&rdquo;</h1>
             <p>Un passo importante compiuto dalla legge n. 107 del 2015 (&ldquo;La Buona Scuola&rdquo;) &egrave; stata la istituzionalizzazione
                 del profilo digitale dello studente, nella cui forma attuale &egrave; associato anche un fascicolo delle
                 esperienze effettuate durante il percorso didattico. Il fascicolo dello studente rappresenta un modo per
@@ -62,7 +60,7 @@
                 risultano trattati da operatori e strutture provinciali dell&rsquo;ambito istruzione.</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <h1 >Documenti e informazioni trattate dalla Cartella dello Studente</h1>
+            <h1>Documenti e informazioni trattate dalla Cartella dello Studente</h1>
             <p>Il progetto di dispiegamento della Cartella dello Studente prevede un percorso a tappe che via via estende il
                 numero dei potenziali utenti, i documenti e dati tratti e infine i servizi a valore aggionto proposti.</p>
             <p>La prima messa in esercizio della soluzione prevede di indirizzare solo gli alunni del quarto e quinto anno iscritti
@@ -80,7 +78,7 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <h1 >Informativa specifica relativa al trattamento Cartella dello Studente (ai sensi dell'art. 13 D.Lgs. 196/2003)</h1>
+            <h1>Informativa specifica relativa al trattamento Cartella dello Studente (ai sensi dell'art. 13 D.Lgs. 196/2003)</h1>
             <p>&nbsp;</p>
             <h2>Quale finalit&agrave; giustifica il trattamento Cartella dello Studente?</h2>
             <p>Il trattamento Cartella dello Studente &egrave; concepito per fornire uno strumento di supporto volto a coadiuvare
@@ -94,7 +92,7 @@
                 dello Studente, hai in qualsiasi momento il diritto di cambiare idea, revocando il consenso in precedenza
                 prestato al trattamento, ovvero esprimendo il consenso in precedenza negato.</p>
             <p>&nbsp;</p>
-            <h2 >Chi pu&ograve; avere conoscenza dei tuoi dati mediante Cartella dello Studente?</h2>
+            <h2>Chi pu&ograve; avere conoscenza dei tuoi dati mediante Cartella dello Studente?</h2>
             <p>I dati trattati in Cartella dello Studente non sono diffusi. Le categorie di soggetti che in qualit&agrave; di
                 incaricati del trattamento possono venire a conoscenza dei dati che ti riguardano &egrave; limitata al profilo
                 degli amministratore di sistema e per le sole operazioni di manutenzione dei sistemi informatici. Il trattamento
@@ -102,7 +100,7 @@
                 sistema, a meno che tu non decida di autorizzare un terzo. Tali autorizzazioni, se concesse, sono da te revocabili
                 in ogni momento.</p>
             <p>&nbsp;</p>
-            <h2 >Modalit&agrave; del trattamento</h2>
+            <h2>Modalit&agrave; del trattamento</h2>
             <p>I dati che ti riguardano sono trattati con strumenti elettronici e sono trasmessi attraverso reti telematiche.
                 Ogni operazione di trattamento relativa a questi dati avviene con un livello di protezione elevato. Ciascun
                 terzo che, previa tua autorizzazione, accede ai dati oggetto del trattamento Cartella dello Studente viene
@@ -111,7 +109,7 @@
                 in cui sono trattati i dati che ti riguardano.</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <h2 >Esercizio dei diritti dell'interessato</h2>
+            <h2>Esercizio dei diritti dell'interessato</h2>
             <p>Ai sensi dell'art. 7 del Codice in materia di protezione dei dati personali, l'interessato pu&ograve; far valere
                 i seguenti diritti:</p>
             <ul>
@@ -129,13 +127,16 @@
                 od organismi, e facendosi assistere da una persona di fiducia., conformemente all'articolo 9, comma 2, del
                 Codice in materia di protezione dei dati personali.</p>
             <p>&nbsp;</p>
-            <h2 >Titolare del trattamento</h2>
+            <h2>Titolare del trattamento</h2>
             <p>Titolare del trattamento &egrave; la Provincia Autonoma di Trento, ai sensi del Codice in materia di protezione
                 dei dati personali.</p>
             <p>&nbsp;</p>
-            <h2 >Responsabile del trattamento</h2>
+            <h2>Responsabile del trattamento</h2>
             <p>Responsabili del trattamento Cartella dello Studente ai sensi del Codice in materia di protezione dei dati personali
-                sono:</p>
+                sono:
+            </p>
+            <p>&hellip;</p>
         </div>
     </div>
+</div>
 </div>
