--- a/frontend/studente/src/pages/stages/stage.html
+++ b/frontend/studente/src/pages/stages/stage.html
@@ -33,11 +33,16 @@
         <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
         <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
       </ion-col>
-      <ion-col col-6>
+      <ion-col col-3>
         <ion-item>
             <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
+      <!-- <ion-col col-3>
+        <ion-item>
+            <ion-icon name="md-trash" (click)="deleteDocument(doc)"></ion-icon>
+        </ion-item>
+      </ion-col> -->
     </ion-row>
   </ng-container>
   <div class="experience-action-buttons" *ngIf="!stage.experience.attributes.institutional">
