--- a/frontend/studente/src/pages/stages/stage.html
+++ b/frontend/studente/src/pages/stages/stage.html
@@ -38,11 +38,11 @@
             <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
-      <!-- <ion-col col-3>
+      <ion-col col-3>
         <ion-item>
             <ion-icon name="md-trash" (click)="deleteDocument(doc)"></ion-icon>
         </ion-item>
-      </ion-col> -->
+      </ion-col>
     </ion-row>
   </ng-container>
   <div class="experience-action-buttons" *ngIf="!stage.experience.attributes.institutional">
