--- a/frontend/studente/src/pages/certifications/certification.html
+++ b/frontend/studente/src/pages/certifications/certification.html
@@ -28,9 +28,14 @@
         <ion-label *ngIf="doc.attributes.title">{{doc.attributes.title}}</ion-label>
         <ion-label *ngIf="!doc.attributes.title && doc.filename">{{doc.filename}}</ion-label>
       </ion-col>
-      <ion-col col-6>
+      <ion-col col-3>
         <ion-item>
           <ion-icon name="md-download" (click)="downloadDocument(doc)"></ion-icon>
+        </ion-item>
+      </ion-col>
+      <ion-col col-3>
+        <ion-item *ngIf="certification.experience.attributes.institutional">
+            <ion-icon name="md-trash" (click)="deleteDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
     </ion-row>
