--- a/frontend/studente/src/pages/mobilities/mobility.html
+++ b/frontend/studente/src/pages/mobilities/mobility.html
@@ -29,7 +29,7 @@
         </ion-item>
       </ion-col>
        <ion-col col-3>
-        <ion-item>
+        <ion-item *ngIf="mobility.experience.attributes.institutional">
             <ion-icon name="md-trash" (click)="deleteDocument(doc)"></ion-icon>
         </ion-item>
       </ion-col>
