Fixes for session scaduta issue
Added errorstring.json for error labels

--- a/frontend/studente/src/pages/login/login.html
+++ b/frontend/studente/src/pages/login/login.html
@@ -15,6 +15,9 @@
         <div class="login-label">{{'app_name'|translate}}</div>
       </ion-col>
     </ion-row>
+    
+    <div padding *ngIf="errorMsg" class="login-error" [innerHTML]="errorMsg"></div>
+    
     <ion-row>
       <ion-col>
         <div class="login-subtitle-label">{{'login_subtitle'|translate}}</div>
